# tree-sitter-gherkin

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  bun.lockb  dsl.d.ts  go.mod  grammar.d.ts  grammar.js  package.json  pnpm-lock.yaml  pyproject.toml  setup.py  tree-sitter.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
bindings/c/: tree-sitter-gherkin.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_gherkin/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterGherkin/: gherkin.h
bindings/swift/TreeSitterGherkinTests/: TreeSitterGherkinTests.swift
queries/gherkin/: highlights.scm
script/: dialect.cc.js
scripts/: gen-dialect.ts  gen-test.ts  tsconfig.json
scripts/utils/: array-trie.ts  radix-tree.ts  token-trie.ts
src/: dialect.cc  dialect.h  grammar.json  node-types.json  parser.c  scanner.c  scanner.cc
src/gherkin/: array_trie.h  dialect.c  dialect.h
test/corpus/: background.txt  datatables.txt  descriptions.txt  docstrings.txt  empty.txt  error.txt  escaped_pipes.txt  example.txt  extra_table_content.txt  feature.txt  i18n.txt  language.txt  minimal.txt  rule.txt  scenario.txt  tags.txt  very_long.txt
